--- a/src/pages/Profile/AlbumGroup/Album/PhotoPreview/styles.module.less
+++ b/src/pages/Profile/AlbumGroup/Album/PhotoPreview/styles.module.less
@@ -18,8 +18,12 @@
 
 @media screen and (max-width: 968px) {
   .imagePreview {
+    display: flex;
     flex-direction: column;
     height: auto;
+    width: 80%;
+    justify-content: center;
+    align-content: center;
   }
 
   .imagePreviewDetails {
