--- a/src/pages/Profile/AlbumGroup/Album/PhotoPreview/styles.module.less
+++ b/src/pages/Profile/AlbumGroup/Album/PhotoPreview/styles.module.less
@@ -2,11 +2,11 @@
   display: flex;
   flex-direction: row;
   height: 90%;
-  align-items: start;
+  align-items: flex-start;
 }
 
 .imagePreviewDetails {
-  border-radius: 0px;
+  border-radius: 0;
   height: 100%;
   width: 500px;
 }
