Improved UI for Posts and Albums

--- a/src/pages/Profile/AlbumGroup/Album/styles.less
+++ b/src/pages/Profile/AlbumGroup/Album/styles.less
@@ -1,13 +1,15 @@
-.ant-image-preview-operations-operation {
-  display: none;
-}
-
-.ant-image-preview-progress {
-  background-color: rgba(0, 0, 0, 0.329);
+:global(.ant-image-preview-progress) {
+  background-color: rgba(0, 0, 0, 0.329) !important;
   color: white;
   width: 50px;
   height: 20px;
   text-align: center;
   border-radius: 4px;
 }
+
+:global(.ant-image-preview-operations) {
+  display: none;
+}
+
+
 
