--- a/src/pages/Profile/PostGroup/Post/styles.module.less
+++ b/src/pages/Profile/PostGroup/Post/styles.module.less
@@ -15,7 +15,10 @@
 }
 
 .postData {
-  width: "100%";
-  padding: 10px 0;
-  border: none;
+  padding: 24px 0;
 }
+
+:global(.ant-card .ant-card-meta-title) {
+  white-space: pre-wrap;
+}
+
